--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css" href="{$basePath}/css/bootstrap-theme.min.css">
-	<title>{ifset title}{include title|striptags} | {/ifset}Nette Web</title>
+        <link rel="stylesheet" type="text/css" href="{$basePath}/css/grido.css">
+        <title>{ifset title}{include title|striptags} | {/ifset}Nette Web</title>
 
-	<link rel="shortcut icon" href="{$basePath}/favicon.ico">
-</head>
+        <link rel="shortcut icon" href="{$basePath}/favicon.ico">
+    </head>
 
-<body>
-	<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
+    <body>
+        <div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
 
-	{include content}
+        {include content}
 
-	{block scripts}
-	<script src="//nette.github.io/resources/js/netteForms.min.js"></script>
+        {block scripts}
+        <script src="//nette.github.io/resources/js/netteForms.min.js"></script>
         <script src="{$basePath}/js/bootstrap.min.js"></script>
- 	{/block}
-</body>
+        <script src="{$basePath}/js/grido.js"></script>
+        {/block}
+    </body>
 </html>
